--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,10 @@ jobs:
 
       - name: Run Tests
         run: go test ./... -cover
+  style:
+    name: Style
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check for formatting issues
+        run: test -z $(go fmt ./...)
