--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,3 +35,9 @@ jobs:
 
       - name: Check for formatting issues
         run: test -z $(go fmt ./...)
+
+      - name: Install staticcheck 
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+      - name: Use Linter
+        run: staticcheck ./...
